; ModuleID = '/home/carl/AnghaBench/mpv/input/extr_cmd.c_is_vararg.c'
source_filename = "/home/carl/AnghaBench/mpv/input/extr_cmd.c_is_vararg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_cmd_def = type { %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i32 }

@MP_CMD_DEF_MAX_ARGS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mp_cmd_def*, i32)* @is_vararg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_vararg(%struct.mp_cmd_def* %0, i32 %1) #0 {
  %3 = alloca %struct.mp_cmd_def*, align 8
  %4 = alloca i32, align 4
  store %struct.mp_cmd_def* %0, %struct.mp_cmd_def** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.mp_cmd_def*, %struct.mp_cmd_def** %3, align 8
  %6 = getelementptr inbounds %struct.mp_cmd_def, %struct.mp_cmd_def* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %28

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = add nsw i32 %10, 1
  %12 = load i32, i32* @MP_CMD_DEF_MAX_ARGS, align 4
  %13 = icmp sge i32 %11, %12
  br i1 %13, label %26, label %14

14:                                               ; preds = %9
  %15 = load %struct.mp_cmd_def*, %struct.mp_cmd_def** %3, align 8
  %16 = getelementptr inbounds %struct.mp_cmd_def, %struct.mp_cmd_def* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = load i32, i32* %4, align 4
  %19 = add nsw i32 %18, 1
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %20
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = icmp ne i32 %23, 0
  %25 = xor i1 %24, true
  br label %26

26:                                               ; preds = %14, %9
  %27 = phi i1 [ true, %9 ], [ %25, %14 ]
  br label %28

28:                                               ; preds = %26, %2
  %29 = phi i1 [ false, %2 ], [ %27, %26 ]
  %30 = zext i1 %29 to i32
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
